--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.1"
   }
